--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -29,6 +29,8 @@
     <ClCompile Include="ext\GLAD\src\glad.c" />
     <ClCompile Include="MeshLibrary.cpp" />
     <ClCompile Include="src\Entity.cpp" />
+    <ClCompile Include="src\EntityFactory.cpp" />
+    <ClCompile Include="src\EntityPool.cpp" />
     <ClCompile Include="src\MaterialLibrary.cpp" />
     <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\RenderBatch.cpp" />
@@ -40,8 +42,6 @@
     <ClCompile Include="TextureLibrary.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EntityFactory.h" />
-    <ClInclude Include="EntityPool.h" />
     <ClInclude Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_glfw.h" />
     <ClInclude Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_opengl3_loader.h" />
@@ -59,6 +59,8 @@
     <ClInclude Include="MeshLibrary.h" />
     <ClInclude Include="src\Component.h" />
     <ClInclude Include="src\Entity.h" />
+    <ClInclude Include="src\EntityFactory.h" />
+    <ClInclude Include="src\EntityPool.h" />
     <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\MaterialEnum.h" />
     <ClInclude Include="src\Mesh.h" />
