Implemented Uniform Buffer Class, & Refactored to work with it

--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -58,6 +58,9 @@
     <Filter Include="Source Files\Systems\EntitySystem">
       <UniqueIdentifier>{cf4707f1-f044-4856-8846-c40588888651}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Shaders\Shader Headers">
+      <UniqueIdentifier>{6fef7a7b-a3eb-4744-8f9f-75d0f0eef781}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Window.cpp">
@@ -87,9 +90,6 @@
     <ClCompile Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_opengl3.cpp">
       <Filter>External Files\ImGui\Backends</Filter>
     </ClCompile>
-    <ClCompile Include="src\UniformData.cpp">
-      <Filter>Source Files\AssetTypes\Material</Filter>
-    </ClCompile>
     <ClCompile Include="src\MaterialLibrary.cpp">
       <Filter>Source Files\Systems\Resource Management</Filter>
     </ClCompile>
@@ -110,6 +110,21 @@
     </ClCompile>
     <ClCompile Include="src\TestComponent.cpp">
       <Filter>Source Files\Systems\EntitySystem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MeshLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ShaderLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TextureLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Light.cpp">
+      <Filter>Source Files\Systems\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UniformBuffer.cpp">
+      <Filter>Source Files\AssetTypes\Material</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -194,6 +209,24 @@
     <ClInclude Include="src\Light.h">
       <Filter>Source Files\Systems\Rendering</Filter>
     </ClInclude>
+    <ClInclude Include="src\MeshEnum.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ShaderEnum.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ShaderLibrary.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TextureEnum.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TextureLibrary.h">
+      <Filter>External Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UniformBuffer.h">
+      <Filter>Source Files\AssetTypes\Material</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\MaterialDiagram.cd">
@@ -202,7 +235,19 @@
     <None Include="res\Shaders\vert\perspective.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
-    <None Include="src\unlit.glsl">
+    <None Include="res\Shaders\frag\monoColour.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="res\Shaders\lightsHeader.glsl">
+      <Filter>Resource Files\Shaders\Shader Headers</Filter>
+    </None>
+    <None Include="res\Shaders\vertexHeader.glsl">
+      <Filter>Resource Files\Shaders\Shader Headers</Filter>
+    </None>
+    <None Include="res\Shaders\fragmentHeader.glsl">
+      <Filter>Resource Files\Shaders\Shader Headers</Filter>
+    </None>
+    <None Include="res\Shaders\light\unlit.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
